epix_add_module(epix_experimental_pixelbody)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_core)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_core_graph)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_assets)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_transform)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_mesh)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_time)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_render)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_ext_grid)
target_link_libraries(epix_experimental_pixelbody PUBLIC epix_ext_fallingsand)
target_link_libraries(epix_experimental_pixelbody PUBLIC glm)
target_link_libraries(epix_experimental_pixelbody PUBLIC box2d)
target_link_libraries(epix_experimental_pixelbody PUBLIC earcut_hpp)

epix_add_examples(pixelbody LINK_LIBS epix_experimental_pixelbody epix_core epix_core_graph epix_glfw epix_glfw_render epix_input epix_render epix_window epix_imgui epix_transform epix_time epix_mesh epix_ext_grid epix_ext_fallingsand)
