epix_add_module(epix_ext_fallingsand)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_core)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_mesh)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_time)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_transform)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_core_graph)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_render)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_ext_grid)
target_link_libraries(epix_ext_fallingsand PUBLIC epix_tasks)
target_link_libraries(epix_ext_fallingsand PUBLIC spdlog::spdlog)

epix_add_examples(fallingsand LINK_LIBS epix_ext_fallingsand epix_glfw epix_glfw_render epix_input epix_render epix_window epix_imgui)
